wip: add agent ingestion components